fix z-index for modal and mapbox

--- a/app/assets/stylesheets/components/_modalmessagerie.scss
+++ b/app/assets/stylesheets/components/_modalmessagerie.scss
@@ -1,4 +1,8 @@
 // Model part
+#myModal {
+  z-index: 5;
+}
+
 .modal {
   display: block;
   position: fixed;
